--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -97,8 +97,8 @@ pipeline {
               script {
                 openshift.withCluster() {
                   openshift.withProject( "${DEV_PROJECT}" ) {
-                    openshift.selector("dc", "${APP_NAME}").related('pods').untilEac(1) {
-                      return (it.object().status.phase == "Runing")
+                    openshift.selector("dc", "${APP_NAME}").related('pods').untilEach(1) {
+                      return (it.object().status.phase == "Running")
                     }
                   }
                 }
