--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -10,9 +10,9 @@ pipeline {
     }
 
     environment {
-        DEV_PROJECT = "youruser-movies-dev"
-        STAGE_PROJECT = "youruser-movies-stage"
-        APP_GIT_URL = "https://github.com/youruser/DO288-apps"
+        DEV_PROJECT = "djfox-us-movies-dev"
+        STAGE_PROJECT = "djfox-us-movies-stage"
+        APP_GIT_URL = "https://github.com/djfox2/DO288-apps"
         NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/java"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
