--- a/ubi-echo/Dockerfile
+++ b/ubi-echo/Dockerfile
@@ -1,3 +1,6 @@
 FROM registry.access.redhat.com/ubi8/ubi:8.0
 USER 1001
-CMD bash -c "while true; do echo test; sleep 5; done"
+CMD bash -c "while true; \
+                do echo don-test; \
+                sleep 5; \
+             done"
