--- a/ubi-echo/Dockerfile
+++ b/ubi-echo/Dockerfile
@@ -1,6 +1,8 @@
 FROM registry.access.redhat.com/ubi8/ubi:8.0
 USER 1001
 CMD bash -c "while true; \
-                do echo don-test; \
+             do \
+		(( i++ )); \
+		echo don-test \$i; \
                 sleep 5; \
              done"
